@@ -227,6 +227,8 @@ Queue changes
  * Added member option ignorebusy this when set and ringinuse is not
    will allow per member control of multiple calls as ringinuse does for
    the Queue.
+ * Added queue options autopausebusy and autopauseunavail for automatically
+   pausing a queue member when their device reports busy or congestion.
 
 Applications
 ------------
